# read_xml

./: .gitignore  Cargo.toml  README.md  output_correlacoes_new  output_docs_nao_encontrados  output_docs_nao_encontrados_e_docs_correlacionados  run_examples.sh
benches/: uniques.rs
src/: args.rs  csv.rs  error.rs  example01.rs  excel.rs  excel_with_polars.rs  group_by_hashmap.rs  lib.rs  main.rs  my_traits.rs  nodes.rs  regex.rs  test_cow.rs  unique_with_cows.rs  write.rs  xlsx_writer.rs
src/xml_structs/: agente.rs  assinaturas.rs  aut_xml.rs  cancelamento.rs  cancelamento_cte.rs  cancelamento_nfe.rs  cobranca.rs  cte_evento.rs  cte_version_3_00.rs  destinatario.rs  efinanceira.rs  emitente.rs  endereco.rs  entrega.rs  expedidor.rs  impostos.rs  integrated_dev_env.rs  mod.rs  nfe_evento.rs  nfe_version_4_00.rs  pagamento.rs  recebedor.rs  remetente.rs  ret_evento.rs  tomador.rs
