[package]
name = "read_xml"
authors = ["Claudio F S Rodrigues <claudiofsrodrigues@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Read XML files recursively and write XLSX files"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = [
    "read",
    "xml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0" # used by clap color
claudiofsr_lib = "0.4"
csv = "1.3"
itertools = "0.12"
once_cell = "1.19"
rayon = "1.9"
regex = "1.10"
serde-aux = "4.5"
struct_iterable = "0.1"
walkdir = "2.5"

[dependencies.clap]
version = "4.5"
features = [
    "color",
    "derive",
    "env",
    "unstable-styles",
]

[dependencies.chrono]
version = "0.4"
features = [
    "serde",
]

[dependencies.indicatif] # ProgressBar
version = "0.17"
features = [
    "rayon"
]

# [dependencies.polars]
# version = "0.35"
# features = [
#   "lazy"
# ]

# [dependencies.polars_excel_writer]
# version = "0.4"
# features = [ "zlib" ]
# git = "https://github.com/jmcnamara/polars_excel_writer"
# branch = "dependabot/cargo/rust_xlsxwriter-0.54.0"
# branch = "dependabot/cargo/polars-0.35.4"

[dependencies.quick-xml]
version = "0.31"
features = [
    "async-tokio",
    "encoding",
    "serialize",
]

[dependencies.rust_xlsxwriter]
# git = "https://github.com/jmcnamara/rust_xlsxwriter.git"
version = "0.63"
features = [
    "chrono",
    "serde",
    "zlib",
    # "polars",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.36"
features = [
    "full",
]

[dependencies.xml_schema_generator]
version = "0.6"
features = [
    "env_logger"
]

# [dependencies.enum_delegate]
# version = "0.2"
# git = "https://gitlab.com/dawn_app/enum_delegate.git"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = true           # Automatically strip symbols from the binary
incremental = true     # Save information to disk, improving re-compile times.
lto = true             # Enable link time optimization
opt-level = 3          # all optimizations
overflow-checks = true # When overflow-checks are enabled, a panic will occur on overflow.
# codegen-units = 1    # Use a single codegen for size optimization
# panic = "abort"      # Remove traceback information

[profile.dev]
opt-level = 1          # Use slightly better optimizations.

# pacman -S aspell-en aspell-pt
# "aspell --lang=en_US --check README.md"